--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- Main Style Sheet -->
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 	
 	
     <!-- YOUR CONTENT STARTS HERE -->
+    <div class="header">
+    <h1>Melissa Calawa: <br/><span class="byline">Senior Project Portfolio</span></h1>
+    <div class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">GitHub</a></li>
+            <li><a href="">Resources</a></li>
+            <li><a href="">CS 460</a></li>
+            <li><a href="">CS 461</a></li>
+            <li><a href="">CS 462</a></li>
+        </ul>
+    </div>
+    </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
 
