Added a bunch more stuff

--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
 	
 	
     <!-- YOUR CONTENT STARTS HERE -->
-    <div class="header">
-    <h1>Melissa Calawa: <br/><span class="byline">Senior Project Portfolio</span></h1>
-    <div class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">Resources</a></li>
-            <li><a href="">CS 460</a></li>
-            <li><a href="">CS 461</a></li>
-            <li><a href="">CS 462</a></li>
-        </ul>
-    </div>
+    <div class="tophalf">
+        <div class="header">
+            <h1>Melissa Calawa: <br/><span class="byline">Senior Project Portfolio</span></h1>
+            <div class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">GitHub</a></li>
+                    <li><a href="">Resources</a></li>
+                    <li><a href="">CS 460</a></li>
+                    <li><a href="">CS 461</a></li>
+                    <li><a href="">CS 462</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="banner">
+            
+        </div>
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
