Changed some stuff

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="navbar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">GitHub</a></li>
+                    <li><a href="https://github.com/mcalawa/senior_project">GitHub</a></li>
                     <li><a href="">Resources</a></li>
                     <li><a href="">CS 460</a></li>
                     <li><a href="">CS 461</a></li>
