Added a whole bunch of pages

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -24,7 +24,7 @@
             <li><a href="games.html">Games</a></li>
             <li><a href="anime.html">Anime</a></li>
             <li><a href="">Page 3</a></li>
-            <li><a href="">Page 4</a></li>
+            <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
         </ul>
        </div>
     </nav>
