--- a/CS_460_Software_Engineering/HW1/anime.html
+++ b/CS_460_Software_Engineering/HW1/anime.html
@@ -18,7 +18,7 @@
     
     <nav>
        <div class="navbar">
-          <h1>Hello, World</h1>
+          <h1>CS 460 Homework 1</h1>
            <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Games</a></li>
