Finished page 3 for homework 1

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -23,7 +23,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="anime.html">Anime</a></li>
-            <li><a href="">Page 3</a></li>
+            <li><a href="english.html">Words</a></li>
             <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
         </ul>
        </div>
@@ -77,7 +77,7 @@
                             &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;li&gt;&lt;a</span> <span class="htmlClass">href</span>=<span class="htmlName">"index.html"</span> <span class="htmlClass">class</span>=<span class="htmlClass">"active"</span><span class="htmlTag">&gt;</span>Home<span class="htmlTag">&lt;/a&gt;&lt;/li&gt;</span><br/>
                             &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;li&gt;&lt;a</span> <span class="htmlClass">href</span>=<span class="htmlName">"games.html"</span><span class="htmlTag">&gt;</span>Games<span class="htmlTag">&lt;/a&gt;&lt;/li&gt;</span><br/>
                             &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;li&gt;&lt;a</span> <span class="htmlClass">href</span>=<span class="htmlName">"anime.html"</span><span class="htmlTag">&gt;</span>Anime<span class="htmlTag">&lt;/a&gt;&lt;/li&gt;</span><br/>
-                            &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;li&gt;&lt;a</span> <span class="htmlClass">href</span>=<span class="htmlName">""</span><span class="htmlTag">&gt;</span>Page 3<span class="htmlTag">&lt;/a&gt;&lt;/li&gt;</span><br/>
+                            &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;li&gt;&lt;a</span> <span class="htmlClass">href</span>=<span class="htmlName">"english.html"</span><span class="htmlTag">&gt;</span>Words<span class="htmlTag">&lt;/a&gt;&lt;/li&gt;</span><br/>
                             &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;li&gt;&lt;a</span> <span class="htmlClass">href</span>=<span class="htmlName">"https://mcalawa.github.io/senior_project/"</span><span class="htmlTag">&gt;</span>Portfolio Home<span class="htmlTag">&lt;/a&gt;&lt;/li&gt;</span><br/>
                         &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;/ul&gt;</span><br/>
                     &thinsp;&thinsp;&thinsp;&thinsp;&thinsp;<span class="htmlTag">&lt;/div&gt;</span><br/>
@@ -86,6 +86,8 @@
         </div>
         
         <p>The nav tag marks something as navigation, while the div with the class navbar is used to apply the background color and as a wrapper to more specifically target the elements I'll be styling. The ul tag marks an unordered list and each li tag represents a list item. In this case, the list items are all links to the various pages. The main styles of note that I used for the navigation bar were <code>float: left;</code>, which makes the list items float to a single line arranged from left to right, and <code>list-style: none;</code>, which removes the bullet points on an unordered list. Both of these styles were applied to li tags of the class navbar.</p>
+        
+        <p>The ordered list is pretty similar to the unordered list. You just use an <code>ol</code> instead of a <code>ul</code> and it will give you a nice numbered list instead of one will bullet points.</p>
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
