--- a/CS_460_Software_Engineering/HW1/anime.html
+++ b/CS_460_Software_Engineering/HW1/anime.html
@@ -23,7 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="anime.html" class="active">Anime</a></li>
-            <li><a href="">Page 3</a></li>
+            <li><a href="english.html">Words</a></li>
             <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
         </ul>
        </div>
