Started adding some references for the stuff we've learned

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -66,7 +66,7 @@
         </code>
         
         <h2>All About Lists</h2>
-        <p>We were required to have at least one of each type of list. My <code>ul</code> is actually my navigation with styling to remove the bullet points and made the list items appear horizontal rather than vertical.</p>
+        <p>We were required to have at least one of each type of list. My <code><span class="htmlTag">ul</span></code> is actually my navigation with styling to remove the bullet points and made the list items appear horizontal rather than vertical.</p>
         
         <div class="htmlCode">
             <code>
