--- a/CS_460_Software_Engineering/HW2/index.html
+++ b/CS_460_Software_Engineering/HW2/index.html
@@ -28,7 +28,8 @@
     </nav>
     
     <div class="content">
-        
+        <h2>About Homework 2</h2>
+        <p><a href="/www.wou.edu/~morses/classes/cs46x/assignments/HW2.html">Here</a> is the assignment page for homework 2. The code for homework 2 can be found <a href="">here</a>. Basically the goal was to learn JavaScript, jQuery, and how to use HTML forms. We had to include a form that took multiple inputs, did something to modify them, and then created a table to display the results. I decided to create a calculator that measured your skill bonus at various levels for D&amp;D 5e because I'm a big ol' nerd.</p>
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
