--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -85,6 +85,23 @@
             </code>
         </div>
         
+        <code class="html">
+            ```html
+        <nav>
+           <div class="navbar">
+            <h1>CS 460 Homework 1</h1>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="games.html">Games</a></li>
+                    <li><a href="anime.html">Anime</a></li>
+                    <li><a href="english.html">Words</a></li>
+                    <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
+                </ul>
+            </div>
+        </nav>
+        ```
+        </code>
+        
         ```html
         <nav>
            <div class="navbar">
