Trying to figure out this markup thing.

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -85,8 +85,8 @@
             </code>
         </div>
         
-        <code class="html">
-            ```html
+        <pre class="lang-html"><code>
+            ```
         <nav>
            <div class="navbar">
             <h1>CS 460 Homework 1</h1>
@@ -100,7 +100,7 @@
             </div>
         </nav>
         ```
-        </code>
+        </code></pre>
         
         ```html
         <nav>
