Trying to figure out this markup thing.

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -87,11 +87,11 @@
         
         <pre class="lang-html"><code>
             ```
-        <nav>
-           <div class="navbar">
-            <h1>CS 460 Homework 1</h1>
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+        `<nav>`
+           `<div class="navbar">`
+            `<h1>`CS 460 Homework 1`</h1>`
+                `<ul>`
+                    `<li>`<a href="index.html" class="active">`Home</a></li>
                     <li><a href="games.html">Games</a></li>
                     <li><a href="anime.html">Anime</a></li>
                     <li><a href="english.html">Words</a></li>
