--- a/CS_460_Software_Engineering/HW1/anime.html
+++ b/CS_460_Software_Engineering/HW1/anime.html
@@ -20,7 +20,7 @@
        <div class="navbar">
           <h1>CS 460 Homework 1</h1>
            <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="https://mcalawa.github.io/senior_project/CS_460_Software_Engineering/HW1">Home</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="anime.html" class="active">Anime</a></li>
             <li><a href="english.html">Words</a></li>
