Working on getting the styling on the markdown to match HTML

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -30,7 +30,10 @@
     </nav>
     
     <div class="content">
-       {{md 'index.md'}}
+        <?php 
+            $contents = file_get_contents('index.md'); 
+            echo $contents;
+        ?>
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
