Working on getting the styling on the markdown to match HTML

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -30,10 +30,7 @@
     </nav>
     
     <div class="content">
-        <?php 
-            $contents = file_get_contents('index.md'); 
-            echo $contents;
-        ?>
+       {{partial "content.html" | print | markdownify}}
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
