Working on getting the styling on the markdown to match HTML

--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -30,7 +30,7 @@
     </nav>
     
     <div class="content">
-       {{partial "content.html" | print | markdownify}}
+       <?php {{partial "content.html" | print | markdownify}} ?>
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
