--- a/CS_460_Software_Engineering/HW1/index.html
+++ b/CS_460_Software_Engineering/HW1/index.html
@@ -30,7 +30,9 @@
     </nav>
     
     <div class="content">
-       <?php {{partial "content.html" | print | markdownify}} ?>
+       <?php 
+           {{partial "content.html" | print | markdownify}} 
+        ?>
     </div>
 		
     <!-- YOUR CONTENT ENDS HERE -->
