--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a name="CS460"><h3>CS 460 Homework</h3></a>
         <ul>
             <li><a href="CS_460_Software_Engineering/HW1/">Homework 1</a></li>
-            <li>Homework 2</li>
+            <li><a href="CS_460_Software_Engineering/HW1/">Homework 2</a></li>
             <li>Homework 3</li>
             <li>Homework 4</li>
             <li>Homework 5</li>
