--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <li><a href="CS_460_Software_Engineering/HW1/">Homework 1</a></li>
             <li><a href="CS_460_Software_Engineering/HW2/">Homework 2</a></li>
             <li><a href="CS_460_Software_Engineering/HW3/">Homework 3</a></li>
-            <li>Homework 4</li>
-            <li>Homework 5</li>
+            <li><a href="http://mcalawa.azurewebsites.net">Homework 4</a></li>
+            <li><a href="http://mcalawahw5.azurewebsites.net/">Homework 5</a></li>
             <li>Homework 6</li>
             <li>Homework 7</li>
             <li>Homework 8</li>
