--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <li><a href="http://mcalawa.azurewebsites.net/">Homework 4</a></li>
             <li><a href="http://mcalawahw5.azurewebsites.net/">Homework 5</a></li>
             <li>Homework 6</li>
-            <li>Homework 7</li>
-            <li>Homework 8</li>
-            <li>Homework 9</li>
+            <li><a href="CS_460_Software_Engineering/HW7/">Homework 7</a></li>
+            <li><a href="CS_460_Software_Engineering/HW8/">Homework 8/9</a></li>
+            <li></li>
         </ul>
         
         <a name="CS461"><h3>CS 461 Homework</h3></a>
